Change view of list-style-id dropdown. Move arrow closer to the text. Fix bug in FF when text in the dropdown button overlaps arrow.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -6134,10 +6134,10 @@ button.close {
   border: 1px solid transparent;
   color: #333333;
   overflow: hidden;
-  padding: 2px 20px 2px 8px;
+  padding: 2px 25px 2px 8px;
   text-align: left;
   text-overflow: ellipsis;
-  width: 225px;
+  max-width: 235px;
 }
 .list-style-id .btn:first-child {
   margin-left: -9px;
@@ -6164,7 +6164,7 @@ button.close {
 }
 .list-style-id .dropdown-menu {
   left: -9px;
-  width: 225px;
+  max-width: 235px;
 }
 .list-style-id .dropdown-menu li a {
   overflow: hidden;
