--- a/static_HTML/less/partials/list-style-id.less
+++ b/static_HTML/less/partials/list-style-id.less
@@ -5,10 +5,10 @@
     border: 1px solid transparent;
     color: @base-font-color-dark;
     overflow: hidden;
-    padding: 2px 20px 2px 8px;
+    padding: 2px 25px 2px 8px;
     text-align: left;
     text-overflow: ellipsis;
-    width: 225px;
+    max-width: 235px;
     &:first-child{
       margin-left: -9px;
     }
@@ -31,7 +31,7 @@
   }
   .dropdown-menu{
     left: -9px;
-    width: 225px;
+    max-width: 235px;
     li a{
       overflow: hidden;
       text-overflow: ellipsis;
